# Test_DB

./: CMakeLists.txt  testdb.c
database/: contacttracing.db  testdb.db
database/sql_scripts/: create_tables.sql  create_views.sql  insert_into.sql
include/: dbfunctions.h
sql_scripts/: create_tables.sql  create_views.sql  insert_into.sql  queries.sql
src/: dbfunctions.c
